--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ html {
 /* Css for CreatePlaylist.Html */
 
 .container2 {
+    margin-top: 40%;
     display: block;
     color: white;
     text-align: center;
