--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,13 @@
     font-family: Arial, sans-serif;
 }
 
-body,
 html {
     height: 100%;
+    justify-content: center;
+}
+
+body {
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -21,6 +25,7 @@ html {
     color: #fff;
     text-align: center;
 }
+
 
 .container {
     width: 90%;
@@ -94,6 +99,15 @@ button:hover {
     margin-bottom: 20px;
 }
 
+.number-box {
+    padding: 5px;
+    width: 50px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+
 .color-header {
     background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet, red, orange, yellow, green, blue, indigo, violet, red);
     background-clip: text;
@@ -114,6 +128,51 @@ button:hover {
     }
 }
 
+#results-box {
+    display: none;
+    padding: 100px;
+}
+
+#results-box h1 {
+    color: rgb(55, 204, 18);
+}
+#results {
+    width: 100%;
+    text-align: center;
+    display: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.track {
+    margin: 10px;
+    height: 300px;
+}
+
+.track-info {
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    white-space: pre;
+}
+
+.track img {
+    max-width: 200px;
+    height: auto;
+}
+
+.results-footer {
+    display: inline-block;
+    align-items: center;
+}
+
+.checkbox-container {
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
 .footer-text {
     font-size: 14px;
     color: #aaa;
